--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
     <h1>Hello Vue</h1>
 
     <div id="app">
-        <p>{{ title }} - {{ author }} - {{ age }}</p>
+       <div v-if="showBooks">
+         <p>{{title}} - {{author}} - {{age}}</p>
+       </div> 
 
-        <button v-on:click="age++">Increase age</button>
-        <button v-on:click="age--">Decrease age</button>
-        <div @click="changeTitle('Oathbringer')">Change Book title</div>
+       <button @click="toggleShowBooks">
+         <span v-if="showBooks">Hide Books</span>
+         <span v-else>Show Books</span>
+       </button>
+
+       
     </div>
 
     <script src="app.js"></script>
