--- a/index.html
+++ b/index.html
@@ -6,13 +6,28 @@
     <title>Vue</title>
     <script src="https://unpkg.com/vue@3.0.2"></script>
     <style>
-        .box {
-            padding: 100px 0;
-            width: 400px;
-            text-align: center;
-            background: #ddd;
-            margin: 20px;
-            display: inline-block;
+        body {
+            background: #eee;
+            max-width: 960px;
+            margin: 20px auto;
+        }
+        p, h3, ul{
+            margin:0;
+            padding:0
+        }
+        li{
+            list-style-type: none;
+            background:#fff;
+            margin: 20px auto;
+            padding: 10px 20px;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+        li.fav{
+            background: #ff9ed2;
+            color:white
         }
     </style>
 </head>
@@ -25,7 +40,7 @@
 
        <div v-if="showBooks">
          <ul>
-            <li v-for="book in books">
+            <li v-for="book in books" v-bind:class="{ fav: book.isFav}">
                 <img v-bind:src="book.img" v-bind:alt="book.title">
                 <h3>{{ book.title }}</h3>
                 <p>{{ book.author }}</p>
@@ -37,13 +52,6 @@
          <span v-if="showBooks">Hide Books</span>
          <span v-else>Show Books</span>
        </button>
-
-       <br>
-
-       <div class="box" @mouseover="handleEvent($event, 5)">mouseover (enter)</div>
-       <div class="box" @mouseleave="handleEvent">mouseleave</div>
-       <div class="box" @dblclick="handleEvent">double click</div>
-       <div class="box" @mousemove="handleMousemove">position - {{x}} - {{y}}</div>
 
        
     </div>
