--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
 
     <div id="app">
 
-        <a v-bind:href="url">google.com</a>
+      
+
+       <a v-bind:href="url">google.com</a>
 
        <div v-if="showBooks">
          <ul>
-            <li v-for="book in books" v-bind:class="{ fav: book.isFav}" @click="toggleFav(book)">
+            <li v-for="book in filteredBooks" v-bind:class="{ fav: book.isFav}" @click="toggleFav(book)">
                 <img v-bind:src="book.img" v-bind:alt="book.title">
                 <h3>{{ book.title }}</h3>
                 <p>{{ book.author }}</p>
